# file_search_tool

./: LICENSE.txt  Pipfile  build.py  file_search.py  pyproject.toml  readme.md  reload.py
file_search/: __main__.py  app.py  backend.py  pysidedeploy.spec
file_search/qml/: AsyncRequest.qml  FileList.qml  HelpScreen.qml  ManageIgnore.qml  ManageSharepointPaths.qml  ManageTableListDelegate.qml  ManageTables.qml  MenuItemWithShortcut.qml  RecurringFiles.qml  Utils.qml  Viewer.qml  main.qml  qmldir
file_search/qml/viewers/: ImageViewerComponent.qml  PdfViewer.qml  PdfViewerComponent.qml  TextViewerComponent.qml
file_search/utils/: database.py  db_worker.py  file_model.py  file_operations.py  recent_files.py  scanner.py  thread_check.py  utils.py
fsearch/: backend.qmltypes  file_model.qmltypes  file_operations.qmltypes  qmldir
