[project]
name = "file_search"
version = "0.1.0"
description = "A tool to find files quickly"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyside6>=6.9.1"]

[tool.pyside6-project]
files = [
    #files
    "file_search\\qml\\AsyncRequest.qml",
    "file_search\\qml\\FileList.qml",
    "file_search\\qml\\HelpScreen.qml",
    "file_search\\qml\\main.qml",
    "file_search\\qml\\ManageIgnore.qml",
    "file_search\\qml\\ManageSharepointPaths.qml",
    "file_search\\qml\\ManageTableListDelegate.qml",
    "file_search\\qml\\ManageTables.qml",
    "file_search\\qml\\MenuItemWithShortcut.qml",
    "file_search\\qml\\RecurringFiles.qml",
    "file_search\\qml\\Utils.qml",
    "file_search\\qml\\Viewer.qml",
    "file_search\\qml\\viewers\\ImageViewerComponent.qml",
    "file_search\\qml\\viewers\\PdfViewer.qml",
    "file_search\\qml\\viewers\\PdfViewerComponent.qml",
    "file_search\\qml\\viewers\\TextViewerComponent.qml",
    "file_search\\app.py",
    "file_search\\backend.py",
    "file_search\\__init__.py",
    "file_search\\__main__.py",
    "file_search\\utils\\database.py",
    "file_search\\utils\\db_worker.py",
    "file_search\\utils\\file_model.py",
    "file_search\\utils\\file_operations.py",
    "file_search\\utils\\recent_files.py",
    "file_search\\utils\\scanner.py",
    "file_search\\utils\\thread_check.py",
    "file_search\\utils\\utils.py"
    #files
]
